--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     h1, h2, h3, h4, h5, h6 {font-weight:normal;}
 
+    p {margin:10px 0;}
+
+    ul {margin:10px 0;}
+        li {margin:10px 40px;}
+
 </style>
 
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
@@ -111,14 +116,11 @@
 
 <button type="submit">Submit</button>
 
-<h2>To do</h2>
-<ul>
-    <li>Documentation</li>
-    <li>Github</li>
-    <li>CDN</li>
-</ul>
 <h2>Features coming</h2>
+
 <ul>
+    <li>CDN</li>
+    <li>Documentation</li>
     <li>Mobile view</li>
     <li>One line checkboxes by width condition</li>
     <li>All html tags support</li>
