--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
 
 <h1>SelectX</h1>
-<p>Replacement for native html select boxes</p>
+<p>Replacement for native html select boxes, epta</p>
 
 <label>
     <div class="label">Cars</div>
