--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <h2>How to</h2>
 
 <ul>
-    <li>If dom mutation events doe not work, use <b>$('#my-select').data('selectx').init()</b> - to update</li>
+    <li>If deprecated DOM mutation events does not work, to update SelectX after native select changes, use <br>$('#my-select').data('selectx').init()</b></li>
 </ul>
 
 </form>
