--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
 
 <h1>SelectX</h1>
-<p>Replacement for native html select boxes, epta</p>
+<p>Replacement for native html select boxes, epta. Sponsored by <a href="http://repetit.ru">repetit.ru</a></p>
 
 <label>
     <div class="label">Cars</div>
@@ -126,12 +126,13 @@
 <h2>How to</h2>
 
 <ul>
-    <li>If deprecated DOM mutation events does not work, to update SelectX after native select changes, use <br>$('#my-select').data('selectx').init()</b></li>
+    <li>If deprecated DOM mutation events does not work, to update SelectX after native select changes, use <br><b>$('#my-select').data('selectx').init()</b></li>
 </ul>
 
-<h2>Features coming</h2>
+<h2>TODO</h2>
 
 <ul>
+    <li>Features</li>
     <li>CDN</li>
     <li>Documentation</li>
     <li>Mobile view</li>
