--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     label {margin:15px 0;display:block;}
     .label {font-size:11px;text-transform:uppercase;line-height:20px;font-weight:bold;}
 
-    button {color:#fff;font-weight:bold;text-transform:uppercase;font-size:12px;background:rgb(102, 170, 238);border:0;line-height:40px;border-radius:2px;padding:0 20px;outline:none;cursor:pointer;margin:10px 0 20px;}
+    button {color:#fff;font-weight:bold;text-transform:uppercase;font-size:12px;background:rgb(102, 170, 238);border:0;line-height:40px;border-radius:2px;padding:0 20px;outline:none;cursor:pointer;margin:10px 0 10px;}
 
     h1, h2, h3, h4, h5, h6 {font-weight:normal;}
 
     p {margin:10px 0;}
 
-    ul {margin:10px 0;}
+    ul {margin:20px 0;}
         li {margin:10px 40px;}
 
 </style>
@@ -30,7 +30,8 @@
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
 
 <h1>SelectX</h1>
-<p>Replacement for native html select boxes, epta. Sponsored by <a href="http://repetit.ru">repetit.ru</a></p>
+<p>Replacement for native html select boxes, epta.</p>
+<p>Sponsored by <a href="http://repetit.ru">repetit.ru</a></p>
 
 <label>
     <div class="label">Cars</div>
