--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h1>SelectX</h1>
 <p>Replacement for native html select boxes, epta.</p>
-<p>Sponsored by <a href="http://repetit.ru">repetit.ru</a></p>
+<p>Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
 
 <label>
     <div class="label">Cars</div>
