--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     h1, h2, h3, h4, h5, h6 {font-weight:normal;}
 
+    h2 {margin:20px 0 10px;}
+
+    pre {marign:10px 0;}
+
     p {margin:10px 0;}
 
     ul {margin:20px 0;}
