--- a/index.html
+++ b/index.html
@@ -197,10 +197,9 @@
 
 <script>
 
-    $('[name="cars"]').selectx({placeholder: 'carrrs'});
-    $('[name="big_cats"]').selectx({placeholder: 'cattts'});
-    $('[name="big_cats2"]').selectx();
-    $('select').not('.lol').selectx({search: false});
+    $('[name="a"]').selectx();
+    $('[name="b"]').selectx({search: 'false'});
+    $('[name="c"]').selectx({placeholder: 'Choose countries'});
 
 </script>
 
