--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     pre {margin:10px 0;}
 
-    p {margin:10px 0;}
+    p {margin:10px 0;line-height:20px;}
 
     ul {margin:20px 0;}
-        li {margin:10px 40px;}
+        li {margin:5px 40px;line-height:20px;}
 
     a {color:#999;}
 
