--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     ul {margin:20px 0;}
         li {margin:5px 40px;line-height:20px;}
 
-    a {color:#999;}
+    a {color:#369;}
 
 </style>
 
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
 
-<a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
+<a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;color:#999;">Github</a>
 <h1>SelectX</h1>
 <p>Replacement for native html select boxes, epta</p>
 <p>Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
