--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <form style="max-width:500px;padding:20px;margin:0 auto;" method="GET" action=".">
 
-<a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;color:#999;">Github</a>
+<a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
 <h1>SelectX</h1>
 <p>Replacement for native html select boxes, epta</p>
 <p>Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
