--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
 
 <button style="margin-bottom:20px;" type="submit">Submit</button>
 
+<h2>TODO</h2>
+
+<ul>
+    <li>Describe, why this gangsta shit is so awesome, that you should forget about select2</li>
+</ul>
+
+<h2>But the main feature is awesome combination with default mobile widget</h2>
+
+<div style="text-align:center;">
+    <img src="mobile.png">
+</div>
+
 <p>Tested in all major browsers (IE9+)</p>
 
 <h2>Quick start</h2>
@@ -155,12 +167,6 @@
         search: true
     }
 </pre>
-
-<h2>TODO</h2>
-
-<ul>
-    <li>Describe, why this gangsta shit is so awesome, that you should forget about select2</li>
-</ul>
 
 <h2>Knowing bugs that will not be ever fixed</h2>
 
