--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
 
 <ul>
     <li>Describe, why this gangsta shit is so awesome, that you should forget about select2</li>
+    <li>But the main feature is awesome combination with default mobile widgets:</li>
 </ul>
-
-<h2>But the main feature is awesome combination with default mobile widget</h2>
 
 <div style="text-align:center;">
     <img src="mobile.png">
