--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </select>
 </label>
 
-<button style="margin-bottom:20px;" type="submit">Submit</button>
+<button type="submit">Submit</button>
 
 <h2>TODO</h2>
 
