--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/1.0.0/selectx.css">
+    <link rel="stylesheet" href="1.0.0/selectx.css">
     <title>SelectX</title>
 </head>
 <body>
@@ -198,7 +198,7 @@
 </form>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="/1.0.0/selectx.js"></script>
+<script src="1.0.0/selectx.js"></script>
 
 <script>
 
