--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
 <h1>SelectX</h1>
-<p>Replacement for native html select boxes, epta</p>
-<p>Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
+<p style="color: #777;">Replacement for native html select boxes, epta</p>
+<p style="color: #777;">Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
 
 <label>
 <div class="label">Select box with search</div>
@@ -72,7 +72,7 @@
 </label>
 
 <label>
-<div class="label">Select box without search</div>
+<div class="label" style="color: #999;">Select box without search</div>
 <select name="b" class="selectx">
 	<option value="">Choose country</option>
 	<optgroup label="First ten">
@@ -103,7 +103,7 @@
 </label>
 
 <label>
-<div class="label">Multiple select box</div>
+<div class="label" style="color: #999;">Multiple select box</div>
 <select name="c" multiple class="selectx">
 	<optgroup label="First ten">
 		<option value="1">United States</option>
