--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <p>Tested in all major browsers (IE9+)</p>
 
-<h2>Quick start</h2>
+<h2>Quick start (CDN for first time)</h2>
 
 <p><i>https://selectx.github.io/1.0.0/selectx.css</i></p>
 <p><i>https://selectx.github.io/1.0.0/selectx.js</i></p>
