--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
 <h1>SelectX</h1>
 <p style="color: #777;">Replacement for native html select boxes, epta</p>
-<p style="color: #777;">Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
+<p style="color: #777;margin:5px 0 10px;">Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
 
 <label>
 <div class="label">Select box with search</div>
