--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 <ul>
     <li>CDN</li>
     <li>Documentation</li>
-    <li>Mobile view</li>
+    <li>Focus on mobile</li>
+    <li>Custom validation attribute + focus on invalid</li>
     <li>One line checkboxes by width condition</li>
     <li>All html tags support</li>
-    <li>Custom validation attribute + focus on invlid</li>
     <li>Combobox</li>
     <li>Templating</li>
     <li>Disable select + choice</li>
