--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <img src="mobile.png">
 </div>
 
-<p>Tested in all major browsers (IE9+)</p>
+<p style="margin-top:20px;">Tested in all major browsers (IE9+)</p>
 
 <h2>Quick start (CDN for first time)</h2>
 
