--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <script>
 
     $('[name="a"]').selectx();
-    $('[name="b"]').selectx({search: 'false'});
+    $('[name="b"]').selectx({search: false});
     $('[name="c"]').selectx({placeholder: 'Choose countries'});
 
 </script>
