--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 <a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
 <h1>SelectX</h1>
 <p style="color: #777;">Replacement for native html select boxes, epta</p>
-<p style="color: #777;margin:5px 0 10px;">Sponsored by <a href="http://repetit.ru" target="_blank">repetit.ru</a></p>
 
 <label>
 <div class="label">Select box with search</div>
@@ -134,13 +133,6 @@
 
 <button type="submit">Submit</button>
 
-<h2>TODO</h2>
-
-<ul>
-    <li>Describe, why this gangsta shit is so awesome, that you should forget about select2</li>
-    <li>But the main feature is awesome combination with default mobile widgets:</li>
-</ul>
-
 <div style="text-align:center;">
     <img src="mobile.png">
 </div>
@@ -167,7 +159,7 @@
     }
 </pre>
 
-<h2>Knowing bugs that will not be ever fixed</h2>
+<h2>Knowing bugs</h2>
 
 <ul>
     <li>Backslashes in search "\" are ignored</li>
@@ -179,7 +171,7 @@
 <ul>
     <li>If deprecated DOM mutation events does not work, to update SelectX after native select changes, use <br><b>$('#my-select').data('selectx').init()</b></li>
 </ul>
-
+<!-- 
 <h2>Coming features</h2>
 
 <ul>
@@ -193,7 +185,7 @@
     <li>Templating</li>
     <li>Disable select + choice</li>
     <li>Tagging support</li>
-</ul>
+</ul> -->
 
 </form>
 
