--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <a href="https://github.com/selectx/selectx.github.io"  target="_blank" style="float:right;">Github</a>
 <h1>SelectX</h1>
-<p style="color: #777;">Replacement for native html select boxes, epta</p>
+<p style="color: #777;">Mobile-friendly replacement for native html select boxes</p>
 
 <label>
 <div class="label">Select box with search</div>
